stack.json
{
  "Resources": {
    "KeyPair": {
      "Type": "AWS::EC2::KeyPair",
      "Properties": {
        "KeyName": { "Fn::Sub": "cloud-course-${AWS::StackName}" }
      }
    },
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": { "Fn::Sub": "my-sg-${AWS::StackName}" },
        "GroupDescription": "Access my instances",
        "SecurityGroupIngress": [
          {
            "CidrIp": { "Fn::Sub": "${AWS::CloudFormation::Init.Metadata.myIP}/32" },
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "CidrIp": { "Fn::Sub": "${AWS::CloudFormation::Init.Metadata.myIP}/32" },
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          }
        ]
      }
    },
    "Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t3.micro",
        "KeyName": { "Ref": "KeyPair" },
        "ImageId": "ami-042e8287309f5df03",
        "SecurityGroupIds": [ { "Ref": "SecurityGroup" } ],
        "UserData": {
          "Fn::Base64": { "Fn::Join": [
            "\n", [
              "#!/bin/bash",
              "curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -",
              "sudo apt-get install -y nodejs",
              "git clone https://github.com/omrizil1/cloud_computing_hw1.git /home/ubuntu/your-app",
              "cd /home/ubuntu/your-app",
              "npm install",
              "nohup npm start &> /dev/null &"
            ]
          ]}
        }
      }
    }
  },
  "Parameters": {
    "myIP": {
      "Type": "String",
      "Default": "$(curl ipinfo.io/ip)"
    }
  }
}
